# FrameQ

./: .env.example  .gitignore  AGENTS.md  README.md  TASKS.md  WORKFLOW.md  douyin_video_download_solution.md  eslint.config.js  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: desktop-release.yml  macos-intel-acceptance.yml  unix-process-supervisor.yml
app/: package-lock.json  package.json
app/src/: App.css  App.css.test.ts  App.tsx  accountClient.test.ts  accountClient.ts  accountCopy.test.ts  accountState.test.ts  accountState.ts  aiCreditsCopy.test.ts  aiCreditsCopy.ts  audioReviewBarState.test.ts  audioReviewBarState.ts  desktopWorkerContract.test.ts  draftDetailClient.test.ts  draftDetailClient.ts  historyClient.test.ts  historyClient.ts  insightPreferenceFlow.test.ts  insightPreferenceFlow.ts  insightPreferences.test.ts  insightPreferences.ts  insightPreferencesClient.test.ts  insightPreferencesClient.ts  installerConfig.test.ts  modelDownloadState.test.ts  modelDownloadState.ts  resultCards.ts  settingsClient.test.ts  settingsClient.ts  taskWorkspaceViewModel.test.ts  taskWorkspaceViewModel.ts  (+12 more)
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
contracts/: desktop-worker-contract.json  platform-url-support-contract.json
deploy/: README.md  server-deployment.md
docs/: ARCHITECTURE.md  DESIGN.md  EXECUTION_GATES.md  SECURITY.md
scripts/: build-installer.mjs  build-installer.ps1  check_srt_timing.py  verify-macos-self-contained.mjs
server/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+226 files in other folders)
